<resources>
    <string name="app_name">Upcoming Games</string>
    <string name="upcoming">Upcoming</string>
    <string name="recent">Recent</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">filter</string>
    <string name="search_all_games">Search all games</string>
    <string name="game_release">game release</string>
    <string name="game_cover">game cover</string>
    <string name="unknown_date">Unknown date</string>
    <string name="no_release_date">No release date</string>
    <string name="not_available">Not available</string>
    <string name="release_date">Release date</string>
    <string name="quarter_release_date">Q%1d %2$s</string>
    <string name="platforms">Platforms</string>
    <string name="developers">Developers</string>
    <string name="publishers">Publishers</string>
    <string name="genres">Genres</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="game_screenshot">Game screenshot</string>
    <string name="screenshots">Screenshots</string>
    <string name="details">Details</string>
    <string name="ratings">Ratings</string>
    <string name="recent_and_upcoming">Recent and upcoming</string>
    <string name="past_month">Past month</string>
    <string name="past_year">Past year</string>
    <string name="custom_range">Custom range…</string>
    <string name="release_date_header">Release date</string>
    <string name="apply">APPLY</string>
    <string name="filter_options">Filter options</string>
    <string name="sort_direction">Sort direction</string>
    <string name="current_generation">Current generation</string>
    <string name="pick_platforms_from_list">Pick from list…</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="all">All</string>
    <string name="unknown">Unknown</string>
    <string name="any">Any</string>
    <string name="web_link">web link</string>
    <string name="search_by_game_title">Search by game title</string>
    <string name="search_item">search item</string>
    <string name="no_network_connection">No network connection.</string>
    <string name="retry">Retry</string>
    <string name="update">update</string>
    <string name="last_updated_data_stale">This data was last updated %s.</string>
    <string name="last_updated_data_stale_user_invoked_update">Update failed. Check your network connection.\n\nThis data was last updated %s.</string>
    <string name="updating_game_database">Updating game database…</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites_added_yet">Your favorites will show up here</string>
    <string name="no_games_match_filter_options">No games found matching your filter options</string>


</resources>
