<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gavinsappcreations.upcominggames.ui.list.ListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.upcoming.UpcomingFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="8dp"
            app:cardElevation="4dp"
            app:contentPadding="4dp"
            app:layout_constraintBottom_toTopOf="@id/game_recyclerView"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/search_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/search"
                    android:drawablePadding="16dp"
                    android:drawableTint="?attr/colorOnBackgroundHighContrast"
                    android:text="@string/search_all_games"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?attr/colorOnBackgroundHighContrast" />

                <ImageButton
                    android:id="@+id/filter_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/filter"
                    android:padding="4dp"
                    android:src="@drawable/filter"
                    android:tint="?attr/colorOnBackgroundHighContrast" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/game_recyclerView"
            listData="@{viewModel.games}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_cardView"
            app:spanCount="2"
            tools:itemCount="16"
            tools:listitem="@layout/grid_view_item" />

        <ImageView
            android:id="@+id/game_cover_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/game_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>